Copy sent mail to mailbox forwarding addresses by default (#22)
