# packages/api/src/projections.ts
@@ -37,6 +37,7 @@ export function projectMailboxSummary(mailbox: DatabaseMailboxSummary): MailboxS
     createdAt: isoDate(mailbox.createdAt),
     forwardTo: mailbox.forwardTo,
     forwardHtml: mailbox.forwardHtml,
+    forwardSent: mailbox.forwardSent,
     renderHtml: mailbox.renderHtml,
     whitelisted: mailbox.whitelisted,
     blocked: mailbox.blocked,
@@ -51,6 +52,7 @@ export function projectMailboxSettings(mailbox: DatabaseMailboxSettings): Mailbo
     address: mailbox.address,
     forwardTo: mailbox.forwardTo,
     forwardHtml: mailbox.forwardHtml,
+    forwardSent: mailbox.forwardSent,
     renderHtml: mailbox.renderHtml,
     whitelisted: mailbox.whitelisted,
     blocked: mailbox.blocked,
