# packages/db/src/schema.ts
@@ -45,6 +45,7 @@ export const mailboxes = sqliteTable(
     whitelisted: integer('whitelisted', { mode: 'boolean' }).notNull().default(false),
     forwardTo: text('forward_to'),
     forwardHtml: integer('forward_html', { mode: 'boolean' }).notNull().default(true),
+    forwardSent: integer('forward_sent', { mode: 'boolean' }).notNull().default(true),
     renderHtml: integer('render_html', { mode: 'boolean' }).notNull().default(false),
     createdAt: integer('created_at', { mode: 'number' }).notNull(),
     updatedAt: integer('updated_at', { mode: 'number' }).notNull(),
